--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,7 +2,8 @@
   - name: Pricing
     link: /pricing/  
    - name: Pricing2
-    link: /pricing2/  
+    link: /pricing2/ 
+    new_window: false
 - links:
 - name: Blog
     link: /blog/
