--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -13,3 +13,7 @@
     link: https://facebook.com
     new_window: true
     social_icon: Facebook
+    - name: LinkedIn
+    link: https://www.linkedin.com/in/hayden-kirk-004bb9122/
+    new_window: true
+    social_icon:
